# expression_parser

./: .gitignore  Cargo.toml  README.md  book.toml  build_docs.sh  doc_built-ins.bat  doc_built-ins.sh  run_tests.sh
.github/workflows/: rust.yml
book/: .generated-built-ins.md  .generated-examples.md  SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  readme.md
docs/: 404.html  chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/book/: custom.js
examples/: calculator.rs  expression.rs  file.rs  format.rs  print_file_examples.rs  print_usage.rs  repl.rs  serde.rs  serde_load_from_file.rs  simple.rs
examples/file/: import.txt  import_from.txt  recursion.txt  script.txt  secant_method.txt  sort.txt
examples/serde_load_from_file/: script.json  script.txt
expression_parser/: Cargo.toml
expression_parser/examples/: print_file_examples.rs  print_usage.rs  simple.rs
expression_parser/examples/file/: import.txt
expression_parser/src/: environment.rs  function.rs  grammar.rs  import.rs  user_function.rs
expression_parser/tests/: json_parser_test.rs  lib_test.rs
expression_parser_macros/: Cargo.toml
expression_parser_macros/src/: iter_variables.rs  lib.rs
src/: arc_utils.rs  assignment.rs  closure.rs  environment.rs  error.rs  expression.pest  expression_value.rs  file.rs  function.rs  grammar.rs  import.rs  lib.rs  statics.rs  string_expression.pest  string_expression.rs  user_function.rs  variables.rs
src/file/: assignment.rs  import.rs
src/function/: functions.rs
src/old/: expression.pest  expression.rs
src/string_expression/: functions.rs
tests/: book_test.rs  json_parser_test.rs  lib_test.rs
(+17 files in other folders)
