[package]
name = "expression_parser"
version = "0.2.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rand  = "0.4"
snailquote = "0.3.0"
strum = "0.18.0"
strum_macros = "0.18.0"

[features]
serde_example = ["serde", "serde_json"]

[[example]]
name = "serde"
required-features = ["serde_example"]
