[package]
name = "expression_parser_macros"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
